- 
    Bug 
- 
    Resolution: Done
- 
    P0: Blocker 
- 
    5.5.0 Beta
- 
    None
- 
    Windows MSVC2013/64bit
- 
        6c8954b07807e31dbc8967ba6d92d4d022073087 (qtools/5.5.0, 14.6.2015, 5.5.0),RT fix: e1b97bb31a685b1d98d26046c4129f2bf6903af0 (qtools/5.5.0. 15.6.2015)
The tool detects the release built library as being debug and thus reports "failed to find the platform plugin".
Also reproduceable in beta 72.
Attached logs of windeployqt --verbose=2 release (MDI widgets example)
- is required for
- 
                    QTBUG-44654 Issues to be fixed before Qt 5.5 RC -         
- Closed
 
-         
- relates to
- 
                    QTBUG-62103 windeployqt cannot find plugins when built with mingw-w64 in release mode with debug information -         
- Open
 
-         
- resulted in
- 
                    QTBUG-47334 windeployqt cannot detect release version of VC2015 binaries -         
- Closed
 
-         
| For Gerrit Dashboard: QTBUG-46629 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 114294,2 | windeployqt: Detect -release -force-debug-info MSVC builds as release. | 5.5.0 | qt/qttools | Status: MERGED | +2 | 0 | 
| 114307,6 | Add auto test for windeployqt. | 5.5 | qt/qttools | Status: MERGED | -2 | 0 | 
| 114392,3 | windeployqt: Fix MSVC debug/release detection for WinRT. | 5.5.0 | qt/qttools | Status: MERGED | +2 | 0 |