windeployqt: Fix MSVC debug/release detection for WinRT.

Change 6c8954b07807e31dbc8967ba6d92d4d022073087 caused WinRT modules
to be detected as release always since the runtime libraries there are
called msvcp120d_app.dll / msvcp120_app.dll. Change the algorithm
to check on the first character after the version number.

Change-Id: I7eb645e9b94f21dd8daaf24f59009cc9c6f18c4c
Task-number: QTBUG-46629
Reviewed-by: Joerg Bornemann <joerg.bornemann@theqtcompany.com>
Reviewed-by: Maurice Kalinowski <maurice.kalinowski@theqtcompany.com>
Reviewed-by: Oliver Wolff <oliver.wolff@theqtcompany.com>